--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wedding-invitation-vue",
+  "name": "toshi-and-kana-wedding-invitation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
